--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,4 +3,6 @@ PORT = 4000
 DB_URI = "mongodb://localhost:27017/E-Commerce"
 
 JWT_SECRET = "My_SECRET_JWT"
-JWT_EXPIRE = 5d  
+JWT_EXPIRE = 5d
+
+COOKIE_EXPIRE = 5
