--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
@@ -45,5 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://192.168.1.12:4000"
 }
