--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nodemailer": "^6.9.13",
+    "stripe": "^15.10.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
