--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -60,5 +60,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.7:4000"
+  "proxy": "http://192.168.1.7:4000",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  }
 }
